--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
 .App {
   min-height: 100vh;
   display: flex;
-  background-image: url("./background.webp");
+  background-image: url("./assets/background.webp");
   background-position: center;
   background-size: cover;
 }
